el numero de campaña en la home ha sido modificado por el correcto

--- a/lookbook.html
+++ b/lookbook.html
@@ -300,11 +300,11 @@
                             <input type="radio" name="tabs" id="tab1" checked>
                             <label for="tab1">All</label>
                             <input type="radio" name="tabs" id="tab2">
-                            <label for="tab2">Sport</label>
+                            <label for="tab2">Restaurantes</label>
                             <input type="radio" name="tabs" id="tab3">
-                            <label for="tab3">Hive</label>
+                            <label for="tab3">Tiendas</label>
                             <input type="radio" name="tabs" id="tab4">
-                            <label for="tab4">Sport Style</label>
+                            <label for="tab4">Eventos</label>
                             <input type="radio" name="tabs" id="tab5">
                             <label for="tab5">Kids</label>
                             <div id="tab-content1" class="tab-content">
