homepage falta margenes y algo de estilos pero done, lookbook alta estilo y setear las stickys, product falta margenes y cta text en todas pero estan armadas las estructuras de las 3 paginas del sitio

--- a/lookbook.html
+++ b/lookbook.html
@@ -334,14 +334,69 @@
                     <!-- Start Photoslurp Embed Code -->
                     <div id="widgetContainer1" class="ps-container">
                         <script data-type="photoslurp">
-                            if(!photoSlurpWidgetSettings) { var photoSlurpWidgetSettings = {}; } (function () { photoSlurpWidgetSettings['widget-container1'] = { widgetContainerId: 'photoslurp_container', widgetId: 'All', widgetType: 'gallery', viewAndShopText: 'View more', albumId:
-                            1814, theme: 'modern', lang: 'net', pageType: 'product', pageLimit: '12', shopThisLookText: 'Get the look', ctaButton: 'Shop now', varyingThumbSizes: true, thumbOverlay: true, visibleProducts: '2', collection: ['HIVE', 'Sport',
-                            'Style'], }; photoSlurpWidgetSettings['widget-container2'] = { widgetContainerId: 'photoslurp_container', widgetId: 'Sport', widgetType: 'gallery', viewAndShopText: 'View more', albumId: 1248, theme: 'modern', lang: 'net',
-                            pageType: 'product', pageLimit: '12', shopThisLookText: 'Get the look', ctaButton: 'Shop now', varyingThumbSizes: true, thumbOverlay: true, visibleProducts: '2', collection: ['Sport'], }; photoSlurpWidgetSettings['widget-container3']
-                            = { widgetContainerId: 'photoslurp_container', widgetId: 'Hive', widgetType: 'gallery', viewAndShopText: 'View more', albumId: 1248, theme: 'modern', lang: 'net', pageType: 'product', pageLimit: '12', shopThisLookText: 'Get
-                            the look', ctaButton: 'Shop now', varyingThumbSizes: true, thumbOverlay: true, visibleProducts: '2', collection: ['HIVE'], }; photoSlurpWidgetSettings['widget-container4'] = { widgetContainerId: 'photoslurp_container', widgetId:
-                            'Sport Style', widgetType: 'gallery', viewAndShopText: 'View more', albumId: 1248, theme: 'modern', lang: 'net', pageType: 'product', pageLimit: '12', shopThisLookText: 'Get the look', ctaButton: 'Shop now', varyingThumbSizes:
-                            true, thumbOverlay: true, visibleProducts: '2', collection: ['Style'], }; photoSlurpWidgetSettings['widget-container5'] = { widgetContainerId: 'photoslurp_container', widgetId: 'Kids', widgetType: 'gallery', viewAndShopText:
+                            if(!photoSlurpWidgetSettings) { 
+                                var photoSlurpWidgetSettings = {}; } (function () { 
+                                photoSlurpWidgetSettings['widget-container1'] = { 
+                                widgetContainerId: 'photoslurp_container', 
+                                widgetType: 'gallery', 
+                                viewAndShopText: 'View more', 
+                                albumId:1814, 
+                                theme: 'modern', 
+                                lang: 'es', 
+                                pageLimit: '12', 
+                                shopThisLookText: 'Get the look', 
+                                ctaButton: 'Shop now', 
+                                varyingThumbSizes: true, 
+                                thumbOverlay: true, 
+                                visibleProducts: '2', 
+                        }; 
+                            photoSlurpWidgetSettings['widget-container2'] = { 
+                                widgetContainerId: 'photoslurp_container', 
+                                widgetType: 'gallery', 
+                                viewAndShopText: 'View more', 
+                                albumId: 1814, 
+                                theme: 'modern', 
+                                lang: 'es',
+                                pageLimit: '12', 
+                                shopThisLookText: 'Get the look', 
+                                ctaButton: 'Shop now', 
+                                varyingThumbSizes: true, 
+                                thumbOverlay: true, 
+                                visibleProducts: '2', 
+                                collection: 'restaurantes', 
+                        }; 
+                            photoSlurpWidgetSettings['widget-container3'] = { 
+                                widgetContainerId: 'photoslurp_container', 
+                                widgetType: 'gallery', 
+                                viewAndShopText: 'View more', 
+                                albumId: 1814, 
+                                theme: 'modern', 
+                                lang: 'es', 
+                                pageLimit: '12', 
+                                shopThisLookText: 'Get the look', 
+                                ctaButton: 'Shop now', 
+                                varyingThumbSizes: true, 
+                                thumbOverlay: true, 
+                                visibleProducts: '2',
+                                collection: 'tiendas', 
+                        }; 
+                            photoSlurpWidgetSettings['widget-container4'] = { 
+                                widgetContainerId: 'photoslurp_container', 
+                                widgetType: 'gallery', 
+                                viewAndShopText: 'View more', 
+                                albumId: 1814, 
+                                theme: 'modern', 
+                                lang: 'es', 
+                                pageLimit: '12', 
+                                shopThisLookText: 'Get the look', 
+                                ctaButton: 'Shop now', 
+                                varyingThumbSizes: true, 
+                                thumbOverlay: true, 
+                                visibleProducts: '2', 
+                                collection: 'eventos', 
+                        }; 
+                            photoSlurpWidgetSettings['widget-container5'] = { 
+                                widgetContainerId: 'photoslurp_container', widgetId: 'Kids', widgetType: 'gallery', viewAndShopText:
                             'View more', albumId: 1248, theme: 'modern', lang: 'net', pageType: 'product', pageLimit: '12', shopThisLookText: 'Get the look', ctaButton: 'Shop now', varyingThumbSizes: true, thumbOverlay: true, visibleProducts: '2', collection:
                             ['Kids'], }; var script = document.createElement('script'); script.async = true; script.src = '//static.photoslurp.com/widget/v3/widget_loader.js'; var entry = document.getElementsByTagName('script')[0]; entry.parentNode.insertBefore(script,
                             entry); })();
