--- a/product.html
+++ b/product.html
@@ -2351,6 +2351,31 @@ L278.6,403.3z"/> </g> </g> </svg></div>
                         </div>
                     </div>
                 </div>
+<!-- Start of Photoslurp -->
+<div id="widgetContainerID" class="ps-container">
+<script type="text/javascript">
+ if (!photoSlurpWidgetSettings) {
+    var photoSlurpWidgetSettings = {};
+}
+
+(function() {
+       photoSlurpWidgetSettings['widgetContainerID'] = {
+              widgetId: 'chooseUniqueID',
+              widgetType: 'carousel',
+              albumId: 1814,
+              theme: 'modern',
+              productId: 'El Perro - Barcelona',
+              lang: 'es', 
+            };
+    var script = document.createElement('script');
+    script.async = true;
+    script.src = '//static.photoslurp.com/widget/v3/widget_loader.js';
+    var entry = document.getElementsByTagName('script')[0];
+    entry.parentNode.insertBefore(script, entry);
+})();
+</script>
+</div>
+<!-- End of Photoslurp -->
                 <div class="texto-relacionados">
                     <h2>Restaurantes relacionados</h2>
                 </div>
