more changes, capitalizing the first letter for hashtag #Diagonalmar. home: CTA text changed. Lookbook: reducing to 4 categories, margi-bottom added. Product: CTA text onboarded.

--- a/lookbook.html
+++ b/lookbook.html
@@ -215,7 +215,7 @@
                             <li id="menu-item-58323" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-58323"><a title="#PorNuestroMar" href="https://www.diagonalmarcentre.es/rsc/" data-value="#PorNuestroMar" class="nav-link">#PorNuestroMar</a></li>
                             <li id="menu-item-58286" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-58286"><a title="Turistas" href="https://www.diagonalmarcentre.es/turistas-info/" data-value="Turistas" class="nav-link">Turistas</a></li>
                             <li id="menu-item-41524" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41524"><a title="Prensa" href="https://www.diagonalmarcentre.es/notas-de-prensa/" data-value="Prensa" class="nav-link">Prensa</a></li>
-                            <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="lookbook.html" data-value="Contacto" class="nav-link">#diagonalmar</a></li>
+                            <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="lookbook.html" data-value="Contacto" class="nav-link">#Diagonalmar</a></li>
                             <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="https://www.diagonalmarcentre.es/contacto/" data-value="Contacto" class="nav-link">Contacto</a></li>
                         </ul>
                     </div>
@@ -289,7 +289,7 @@
                     <h1 style="text-align: center">#diagonalmar</h1>
                 </div>
             </div>
-            <div class="container no-home" id="horarios">
+            <div >
                 <!--Start of photoslurp-->
 
                 <div id="phototags_container" class="col-xs-12">
@@ -305,8 +305,8 @@
                             <label for="tab3">Tiendas</label>
                             <input type="radio" name="tabs" id="tab4">
                             <label for="tab4">Eventos</label>
-                            <input type="radio" name="tabs" id="tab5">
-                            <label for="tab5">Kids</label>
+                            <!-- <input type="radio" name="tabs" id="tab5">
+                            <label for="tab5">Kids</label> -->
                             <div id="tab-content1" class="tab-content">
                                 <div id="widget-container1" class="ps-container">
                                 </div>
@@ -323,10 +323,10 @@
                                 <div id="widget-container4" class="ps-container">
                                 </div>
                             </div>
-                            <div id="tab-content5" class="tab-content">
+                           <!--  <div id="tab-content5" class="tab-content">
                                 <div id="widget-container5" class="ps-container">
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -395,10 +395,11 @@
                                 visibleProducts: '2', 
                                 collection: 'eventos', 
                         }; 
-                            photoSlurpWidgetSettings['widget-container5'] = { 
-                                widgetContainerId: 'photoslurp_container', widgetId: 'Kids', widgetType: 'gallery', viewAndShopText:
-                            'View more', albumId: 1248, theme: 'modern', lang: 'net', pageType: 'product', pageLimit: '12', shopThisLookText: 'Get the look', ctaButton: 'Shop now', varyingThumbSizes: true, thumbOverlay: true, visibleProducts: '2', collection:
-                            ['Kids'], }; var script = document.createElement('script'); script.async = true; script.src = '//static.photoslurp.com/widget/v3/widget_loader.js'; var entry = document.getElementsByTagName('script')[0]; entry.parentNode.insertBefore(script,
+                            // photoSlurpWidgetSettings['widget-container5'] = { 
+                            //     widgetContainerId: 'photoslurp_container', widgetId: 'Kids', widgetType: 'gallery', viewAndShopText:
+                            // 'View more', albumId: 1248, theme: 'modern', lang: 'net', pageType: 'product', pageLimit: '12', shopThisLookText: 'Get the look', ctaButton: 'Shop now', varyingThumbSizes: true, thumbOverlay: true, visibleProducts: '2', collection:['Kids'], }; 
+                            
+                            var script = document.createElement('script'); script.async = true; script.src = '//static.photoslurp.com/widget/v3/widget_loader.js'; var entry = document.getElementsByTagName('script')[0]; entry.parentNode.insertBefore(script,
                             entry); })();
                         </script>
                         <a href="//hi.photoslurp.com/partners/hummel?utm_source=widgt&utm_medium=powered-by-photoslurp&utm_campaign=photoslurp-widget" target="_blank" class="ps-poweredby-link" title="Powered by Photoslurp">
