--- a/product.html
+++ b/product.html
@@ -222,7 +222,7 @@
                             <li id="menu-item-58323" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-58323"><a title="#PorNuestroMar" href="https://www.diagonalmarcentre.es/rsc/" data-value="#PorNuestroMar" class="nav-link">#PorNuestroMar</a></li>
                             <li id="menu-item-58286" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-58286"><a title="Turistas" href="https://www.diagonalmarcentre.es/turistas-info/" data-value="Turistas" class="nav-link">Turistas</a></li>
                             <li id="menu-item-41524" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41524"><a title="Prensa" href="https://www.diagonalmarcentre.es/notas-de-prensa/" data-value="Prensa" class="nav-link">Prensa</a></li>
-                            <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="lookbook.html" data-value="Contacto" class="nav-link">#diagonalmar</a></li>
+                            <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="lookbook.html" data-value="Contacto" class="nav-link">#Diagonalmar</a></li>
                             <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="https://www.diagonalmarcentre.es/contacto/" data-value="Contacto" class="nav-link">Contacto</a></li>
                         </ul>
                     </div>
@@ -2352,6 +2352,9 @@ L278.6,403.3z"/> </g> </g> </svg></div>
                     </div>
                 </div>
 <!-- Start of Photoslurp -->
+<div class="texto-relacionados">
+    <h2>#Diagonalmar</h2>
+</div>
 <div id="widgetContainerID" class="ps-container">
 <script type="text/javascript">
  if (!photoSlurpWidgetSettings) {
