--- a/lookbook.html
+++ b/lookbook.html
@@ -181,7 +181,9 @@
                 console.log("Failure at Presize of Slider:" + d)
             }
         };
-    </script> <noscript><style id="rocket-lazyload-nojs-css">.rll-youtube-player,[data-lazy-src]{display:none!important}</style></noscript></head>
+    </script> <noscript><style id="rocket-lazyload-nojs-css">.rll-youtube-player,[data-lazy-src]{display:none!important}</style></noscript>
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
 
 <body class="page-template page-template-page-horarios page-template-page-horarios-php page page-id-14">
     <div id="page" class="site">
@@ -215,7 +217,7 @@
                             <li id="menu-item-58323" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-58323"><a title="#PorNuestroMar" href="https://www.diagonalmarcentre.es/rsc/" data-value="#PorNuestroMar" class="nav-link">#PorNuestroMar</a></li>
                             <li id="menu-item-58286" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-58286"><a title="Turistas" href="https://www.diagonalmarcentre.es/turistas-info/" data-value="Turistas" class="nav-link">Turistas</a></li>
                             <li id="menu-item-41524" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41524"><a title="Prensa" href="https://www.diagonalmarcentre.es/notas-de-prensa/" data-value="Prensa" class="nav-link">Prensa</a></li>
-                            <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="lookbook.html" data-value="Contacto" class="nav-link">#Diagonalmar</a></li>
+                            <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="lookbook.html" data-value="Contacto" class="nav-link" data-aos="flip-left">#Diagonalmar</a></li>
                             <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="https://www.diagonalmarcentre.es/contacto/" data-value="Contacto" class="nav-link">Contacto</a></li>
                         </ul>
                     </div>
@@ -286,13 +288,13 @@
         <div id="content" class="site-content title-changer">
             <div class="header-wrapper text-center" style="position:relative;background-image: url(assets/img/lookbook.jpg)">
                 <div class="container container-title-oscurecido">
-                    <h1 style="text-align: center">#diagonalmar</h1>
+                    <h1 style="text-align: center" data-aos="fade-in">#Diagonalmar</h1>
                 </div>
             </div>
             <div >
                 <!--Start of photoslurp-->
 
-                <div id="phototags_container" class="col-xs-12">
+                <div id="phototags_container" class="col-xs-12" data-aos="fade-in">
                     <div class="wrapper-widgets">
 
 
@@ -530,6 +532,10 @@
 
                 gtag('config', 'UA-18633652-8');
             </script>
+             <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
