--- a/product.html
+++ b/product.html
@@ -26,6 +26,7 @@
     <meta name="theme-color" content="#ffffff"> <noscript><style>[data-aos^=fade][data-aos^=fade]{opacity:1!important}</style></noscript>
     <title>El Perro en Barcelona | Restaurantes | Diagonal Mar Centre</title>
     <link rel="stylesheet" href="css/1101604483ed284179caf4a075d5e2a9.css" data-minify="1" />
+    <link rel="stylesheet" href="css/product.css">
     <meta name="description" content="Toda la información que buscas acerca del restaurante El Perro de Diagonal Mar Centre. Menús, oferta gastronómica, localización, contacto..." />
     <link rel="canonical" href="https://www.diagonalmarcentre.es/tiendas/el-perro/" />
     <meta property="og:locale" content="es_ES" />
@@ -188,7 +189,9 @@
                 console.log("Failure at Presize of Slider:" + d)
             }
         };
-    </script> <noscript><style id="rocket-lazyload-nojs-css">.rll-youtube-player,[data-lazy-src]{display:none!important}</style></noscript></head>
+    </script> <noscript><style id="rocket-lazyload-nojs-css">.rll-youtube-player,[data-lazy-src]{display:none!important}</style></noscript>
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
 
 <body class="tiendas-template-default single single-tiendas postid-56025">
     <div id="page" class="site">
@@ -222,7 +225,7 @@
                             <li id="menu-item-58323" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-58323"><a title="#PorNuestroMar" href="https://www.diagonalmarcentre.es/rsc/" data-value="#PorNuestroMar" class="nav-link">#PorNuestroMar</a></li>
                             <li id="menu-item-58286" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-58286"><a title="Turistas" href="https://www.diagonalmarcentre.es/turistas-info/" data-value="Turistas" class="nav-link">Turistas</a></li>
                             <li id="menu-item-41524" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41524"><a title="Prensa" href="https://www.diagonalmarcentre.es/notas-de-prensa/" data-value="Prensa" class="nav-link">Prensa</a></li>
-                            <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="lookbook.html" data-value="Contacto" class="nav-link">#Diagonalmar</a></li>
+                            <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="lookbook.html" data-value="Contacto" class="nav-link" data-aos="flip-left">#Diagonalmar</a></li>
                             <li id="menu-item-41522" class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-41522"><a title="Contacto" href="https://www.diagonalmarcentre.es/contacto/" data-value="Contacto" class="nav-link">Contacto</a></li>
                         </ul>
                     </div>
@@ -2352,31 +2355,32 @@ L278.6,403.3z"/> </g> </g> </svg></div>
                     </div>
                 </div>
 <!-- Start of Photoslurp -->
-<div class="texto-relacionados">
-    <h2>#Diagonalmar</h2>
-</div>
-<div id="widgetContainerID" class="ps-container">
-<script type="text/javascript">
- if (!photoSlurpWidgetSettings) {
-    var photoSlurpWidgetSettings = {};
-}
 
-(function() {
-       photoSlurpWidgetSettings['widgetContainerID'] = {
-              widgetId: 'chooseUniqueID',
-              widgetType: 'carousel',
-              albumId: 1814,
-              theme: 'modern',
-              productId: 'El Perro - Barcelona',
-              lang: 'es', 
-            };
-    var script = document.createElement('script');
-    script.async = true;
-    script.src = '//static.photoslurp.com/widget/v3/widget_loader.js';
-    var entry = document.getElementsByTagName('script')[0];
-    entry.parentNode.insertBefore(script, entry);
-})();
-</script>
+<div id="widgetContainerID" class="ps-container" data-aos="fade-in">
+    <div class="texto-relacionados" style="margin-bottom: 44px !important;">
+        <h2 data-aos="flip-left">#Diagonalmar</h2>
+    </div>
+    <script type="text/javascript">
+     if (!photoSlurpWidgetSettings) {
+        var photoSlurpWidgetSettings = {};
+    }
+        
+    (function() {
+           photoSlurpWidgetSettings['widgetContainerID'] = {
+                  widgetId: 'chooseUniqueID',
+                  widgetType: 'carousel',
+                  albumId: 1814,
+                  theme: 'modern',
+                  productId: 'El Perro - Barcelona',
+                  lang: 'es', 
+                };
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = '//static.photoslurp.com/widget/v3/widget_loader.js';
+        var entry = document.getElementsByTagName('script')[0];
+        entry.parentNode.insertBefore(script, entry);
+    })();
+    </script>
 </div>
 <!-- End of Photoslurp -->
                 <div class="texto-relacionados">
@@ -2579,6 +2583,10 @@ L278.6,403.3z"/> </g> </g> </svg></div>
 
         gtag('config', 'UA-18633652-8');
     </script>
+     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
